--- a/demo-app/ingress.yaml
+++ b/demo-app/ingress.yaml
@@ -1,33 +1,20 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Rollout
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
-  name: nginx
+  name: nginx-ingress
   namespace: demo
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"   # 👈 se aplica primero en ArgoCD
 spec:
-  replicas: 5
-  selector:
-    matchLabels:
-      app: nginx
-  strategy:
-    canary:
-      canaryService: nginx-canary
-      stableService: nginx-stable
-      trafficRouting:
-        nginx:
-          stableIngress: nginx-ingress   # 👈 Aquí indicás el Ingress que ya creaste
-      steps:
-      - setWeight: 20
-      - pause: { duration: 30 }   # espera 30s
-      - setWeight: 50
-      - pause: { duration: 60 }   # espera 60s
-      - setWeight: 100
-  template:
-    metadata:
-      labels:
-        app: nginx
-    spec:
-      containers:
-      - name: nginx
-        image: nginx:1.19
-        ports:
-        - containerPort: 80
+  ingressClassName: nginx
+  rules:
+    - host: nginx-demo.local
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: nginx-stable
+                port:
+                  number: 80
