--- a/demo-app/ingress.yaml
+++ b/demo-app/ingress.yaml
@@ -1,20 +1,20 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: nginx-ingress
-  namespace: demo
+  name: app-ingress
+  namespace: app-demo
   annotations:
     argocd.argoproj.io/sync-wave: "0"   # 👈 se aplica primero en ArgoCD
 spec:
   ingressClassName: nginx
   rules:
-    - host: nginx-demo.local
+    - host: app-demo.local
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: nginx-stable
+                name: app-stable
                 port:
                   number: 80
