--- a/demo-app/rollout.yaml
+++ b/demo-app/rollout.yaml
@@ -29,7 +29,7 @@ spec:
         app: nginx
     spec:
       containers:
-        - name: app
+        - name: nginx
           image: nginx:1.19
           ports:
             - containerPort: 80
