--- a/demo-app/rollout.yaml
+++ b/demo-app/rollout.yaml
@@ -26,7 +26,7 @@ spec:
   template:
     metadata:
       labels:
-        app: nginx
+        app: app
     spec:
       containers:
         - name: nginx
