--- a/argo-app/argocd/install.yaml
+++ b/argo-app/argocd/install.yaml
@@ -24610,6 +24610,11 @@ data:
       ignoreDifferences: |
         jsonPointers:
           - /spec/selector/rollouts-pod-template-hash
+  resource.customizations: |
+    Service:
+      ignoreDifferences: |
+        jsonPointers:
+          - /spec/selector/rollouts-pod-template-hash
   resource.customizations.ignoreResourceUpdates.ConfigMap: |
     jqPathExpressions:
       # Ignore the cluster-autoscaler status
