--- a/demo-app/rollout.yaml
+++ b/demo-app/rollout.yaml
@@ -33,3 +33,11 @@ spec:
           image: nginx:1.21
           ports:
             - containerPort: 80
+          volumeMounts:
+            - name: nginx-index
+              mountPath: /usr/share/nginx/html/index.html
+              subPath: index.html
+      volumes:
+        - name: nginx-index
+          configMap:
+            name: nginx-index-html
