--- a/demo-app/rollout.yaml
+++ b/demo-app/rollout.yaml
@@ -4,40 +4,40 @@ metadata:
   name: app
   namespace: app-demo
   annotations:
-    argocd.argoproj.io/sync-wave: "1"   # 👈 se aplica después del Ingress
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   replicas: 5
   selector:
     matchLabels:
-      app: app
+      app: nginx
   strategy:
     canary:
       canaryService: app-canary
       stableService: app-stable
       trafficRouting:
         nginx:
-          stableIngress: app-ingress   # 👈 Ingress que maneja el tráfico
+          stableIngress: app-ingress
       steps:
         - setWeight: 20
-        - pause: { duration: 10 }   # espera 10s
+        - pause: { duration: 10 }
         - setWeight: 50
-        - pause: { duration: 30 }   # espera 30s
+        - pause: { duration: 30 }
         - setWeight: 100
   template:
     metadata:
       labels:
-        app: app
+        app: nginx
     spec:
       containers:
         - name: nginx
-          image: nginx:1.21
+          image: nginx:1.19
           ports:
             - containerPort: 80
-        volumeMounts:
-        - name: html-volume
-          mountPath: /usr/share/nginx/html/index.html
-          subPath: index.html
+          volumeMounts:
+            - name: html-volume
+              mountPath: /usr/share/nginx/html/index.html
+              subPath: index.html
       volumes:
-      - name: html-volume
-        configMap:
-          name: app-index-html
+        - name: html-volume
+          configMap:
+            name: app-index-html
