--- a/argo-app/app-demo.yaml
+++ b/argo-app/app-demo.yaml
@@ -11,7 +11,7 @@ spec:
     path: demo-app
   destination:
     server: https://kubernetes.default.svc
-    namespace: demo
+    namespace: app-demo
   syncPolicy:
     automated:
       prune: true
