--- a/demo-app/services.yaml
+++ b/demo-app/services.yaml
@@ -8,7 +8,7 @@ spec:
     - port: 80
       targetPort: 80
   selector:
-    app: app
+    app: nginx
     rollouts-pod-template-hash: stable
 ---
 apiVersion: v1
@@ -21,5 +21,5 @@ spec:
     - port: 80
       targetPort: 80
   selector:
-    app: app
+    app: nginx
     rollouts-pod-template-hash: canary
