--- a/demo-app/kustomization.yaml
+++ b/demo-app/kustomization.yaml
@@ -1,6 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+configurations:
+- kustomize-transformers.yaml
+
 resources:
   - rollout.yaml
   - services.yaml
@@ -10,13 +13,3 @@ configMapGenerator:
 - name: app-index-html
   files:
   - index.html
-
-patches:
-- patch: |-
-    - op: add
-      path: /spec/template/metadata/annotations
-      value:
-        checksum/config: $(cat index.html | sha256sum)
-  target:
-    kind: Rollout
-    name: app
