--- a/argo-app/app-demo.yaml
+++ b/argo-app/app-demo.yaml
@@ -1,18 +1,26 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: app-demo
+  name: app-demo-application
   namespace: argocd
 spec:
   project: default
+
   source:
-    repoURL: https://github.com/fpultera/argo-lab.git
-    targetRevision: main
-    path: demo-app
+    repoURL: 'https://github.com/fpultera/argo-lab.git'
+    path: '/app-demo/helm'
+    targetRevision: HEAD
+    helm:
+      valueFiles:
+        - values.yaml
+
   destination:
-    server: https://kubernetes.default.svc
-    namespace: app-demo
+    server: 'https://kubernetes.default.svc'
+    namespace: 'app-demo'
+
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
