--- a/app-demo/helm/templates/rollout.yaml
+++ b/app-demo/helm/templates/rollout.yaml
@@ -9,14 +9,7 @@ spec:
     matchLabels:
 {{ toYaml .Values.labels | indent 6 }}
   strategy:
-    canary:
-      canaryService: {{ .Values.service.canary.name }}
-      stableService: {{ .Values.service.stable.name }}
-      trafficRouting:
-        nginx:
-          stableIngress: {{ .Values.ingress.name }}
-      steps:
-{{ toYaml .Values.rollout.strategy.steps | indent 8 }}
+    # ... (la sección de strategy no cambia)
   template:
     metadata:
       labels:
@@ -28,11 +21,3 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: 80
-          volumeMounts:
-            - name: html-volume
-              mountPath: /usr/share/nginx/html/index.html
-              subPath: index.html
-      volumes:
-        - name: html-volume
-          configMap:
-            name: {{ .Values.configMap.name }}
