--- a/argo-app/argocd/install.yaml
+++ b/argo-app/argocd/install.yaml
@@ -26798,3 +26798,28 @@ spec:
       app.kubernetes.io/name: argocd-server
   policyTypes:
   - Ingress
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: argocd-server-ingress
+  namespace: argocd
+  annotations:
+    # La anotación "kubernetes.io/ingress.class" se elimina de aquí.
+    # Mantenemos las otras anotaciones específicas de NGINX que puedas necesitar.
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
+spec:
+  # ESTA ES LA FORMA MODERNA Y CORRECTA
+  ingressClassName: "nginx"
+  rules:
+  - host: "argocd.local"
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: argocd-server
+            port:
+              number: 80
