--- a/app-demo/helm/values.yaml
+++ b/app-demo/helm/values.yaml
@@ -5,7 +5,7 @@ replicas: 5
 
 image:
   repository: fpultera/app-demo
-  tag: "v1.0.0"
+  tag: "latest"
   pullPolicy: IfNotPresent
 
 # Labels que se usarán en todos los recursos
